src/Bindings/Binaryen/Raw.hs

foreign import ccall unsafe "BinaryenGtUVecI8x16" gtUVecI8x16 :: Op
foreign import ccall unsafe "BinaryenLeSVecI8x16" leSVecI8x16 :: Op
foreign import ccall unsafe "BinaryenLeUVecI8x16" leUVecI8x16 :: Op
foreign import ccall unsafe "BinaryenGeSVecI8x16" geSVecI8x16 :: Op
foreign import ccall unsafe "BinaryenGeUVecI8x16" geUVecI8x16 :: Op
foreign import ccall unsafe "BinaryenEqVecI16x8" eqVecI16x8 :: Op
foreign import ccall unsafe "BinaryenNeVecI16x8" neVecI16x8 :: Op
foreign import ccall unsafe "BinaryenLtSVecI16x8" ltSVecI16x8 :: Op
foreign import ccall unsafe "BinaryenLtUVecI16x8" ltUVecI16x8 :: Op
foreign import ccall unsafe "BinaryenGtSVecI16x8" gtSVecI16x8 :: Op
foreign import ccall unsafe "BinaryenGtUVecI16x8" gtUVecI16x8 :: Op
foreign import ccall unsafe "BinaryenLeSVecI16x8" leSVecI16x8 :: Op
foreign import ccall unsafe "BinaryenLeUVecI16x8" leUVecI16x8 :: Op
foreign import ccall unsafe "BinaryenGeSVecI16x8" geSVecI16x8 :: Op
foreign import ccall unsafe "BinaryenGeUVecI16x8" geUVecI16x8 :: Op
foreign import ccall unsafe "BinaryenEqVecI32x4" eqVecI32x4 :: Op
foreign import ccall unsafe "BinaryenNeVecI32x4" neVecI32x4 :: Op
foreign import ccall unsafe "BinaryenLtSVecI32x4" ltSVecI32x4 :: Op
foreign import ccall unsafe "BinaryenLtUVecI32x4" ltUVecI32x4 :: Op
foreign import ccall unsafe "BinaryenGtSVecI32x4" gtSVecI32x4 :: Op
foreign import ccall unsafe "BinaryenGtUVecI32x4" gtUVecI32x4 :: Op
foreign import ccall unsafe "BinaryenLeSVecI32x4" leSVecI32x4 :: Op
foreign import ccall unsafe "BinaryenLeUVecI32x4" leUVecI32x4 :: Op
foreign import ccall unsafe "BinaryenGeSVecI32x4" geSVecI32x4 :: Op
foreign import ccall unsafe "BinaryenGeUVecI32x4" geUVecI32x4 :: Op
foreign import ccall unsafe "BinaryenEqVecF32x4" eqVecF32x4 :: Op
foreign import ccall unsafe "BinaryenNeVecF32x4" neVecF32x4 :: Op
foreign import ccall unsafe "BinaryenLtVecF32x4" ltVecF32x4 :: Op
foreign import ccall unsafe "BinaryenGtVecF32x4" gtVecF32x4 :: Op
foreign import ccall unsafe "BinaryenLeVecF32x4" leVecF32x4 :: Op
foreign import ccall unsafe "BinaryenGeVecF32x4" geVecF32x4 :: Op
foreign import ccall unsafe "BinaryenEqVecF64x2" eqVecF64x2 :: Op
foreign import ccall unsafe "BinaryenNeVecF64x2" neVecF64x2 :: Op
foreign import ccall unsafe "BinaryenLtVecF64x2" ltVecF64x2 :: Op
foreign import ccall unsafe "BinaryenGtVecF64x2" gtVecF64x2 :: Op
foreign import ccall unsafe "BinaryenLeVecF64x2" leVecF64x2 :: Op
foreign import ccall unsafe "BinaryenGeVecF64x2" geVecF64x2 :: Op
foreign import ccall unsafe "BinaryenNotVec128" notVec128 :: Op
foreign import ccall unsafe "BinaryenAndVec128" andVec128 :: Op
foreign import ccall unsafe "BinaryenOrVec128" orVec128 :: Op
foreign import ccall unsafe "BinaryenXorVec128" xorVec128 :: Op
foreign import ccall unsafe "BinaryenAndNotVec128" andNotVec128 :: Op
foreign import ccall unsafe "BinaryenBitselectVec128" bitselectVec128 :: Op
foreign import ccall unsafe "BinaryenNegVecI8x16" negVecI8x16 :: Op
foreign import ccall unsafe "BinaryenAnyTrueVecI8x16" anyTrueVecI8x16 :: Op
foreign import ccall unsafe "BinaryenAllTrueVecI8x16" allTrueVecI8x16 :: Op
foreign import ccall unsafe "BinaryenShlVecI8x16" shlVecI8x16 :: Op
foreign import ccall unsafe "BinaryenShrSVecI8x16" shrSVecI8x16 :: Op
foreign import ccall unsafe "BinaryenShrUVecI8x16" shrUVecI8x16 :: Op
foreign import ccall unsafe "BinaryenAddVecI8x16" addVecI8x16 :: Op
foreign import ccall unsafe "BinaryenAddSatSVecI8x16" addSatSVecI8x16 :: Op
foreign import ccall unsafe "BinaryenAddSatUVecI8x16" addSatUVecI8x16 :: Op
foreign import ccall unsafe "BinaryenSubVecI8x16" subVecI8x16 :: Op
foreign import ccall unsafe "BinaryenSubSatSVecI8x16" subSatSVecI8x16 :: Op
foreign import ccall unsafe "BinaryenSubSatUVecI8x16" subSatUVecI8x16 :: Op
foreign import ccall unsafe "BinaryenMulVecI8x16" mulVecI8x16 :: Op
foreign import ccall unsafe "BinaryenMinSVecI8x16" minSVecI8x16 :: Op
foreign import ccall unsafe "BinaryenMinUVecI8x16" minUVecI8x16 :: Op
foreign import ccall unsafe "BinaryenMaxSVecI8x16" maxSVecI8x16 :: Op
foreign import ccall unsafe "BinaryenMaxUVecI8x16" maxUVecI8x16 :: Op
foreign import ccall unsafe "BinaryenAvgrUVecI8x16" avgrUVecI8x16 :: Op
foreign import ccall unsafe "BinaryenNegVecI16x8" negVecI16x8 :: Op
foreign import ccall unsafe "BinaryenAnyTrueVecI16x8" anyTrueVecI16x8 :: Op
foreign import ccall unsafe "BinaryenAllTrueVecI16x8" allTrueVecI16x8 :: Op
foreign import ccall unsafe "BinaryenShlVecI16x8" shlVecI16x8 :: Op
foreign import ccall unsafe "BinaryenShrSVecI16x8" shrSVecI16x8 :: Op
foreign import ccall unsafe "BinaryenShrUVecI16x8" shrUVecI16x8 :: Op
foreign import ccall unsafe "BinaryenAddVecI16x8" addVecI16x8 :: Op
foreign import ccall unsafe "BinaryenAddSatSVecI16x8" addSatSVecI16x8 :: Op
foreign import ccall unsafe "BinaryenAddSatUVecI16x8" addSatUVecI16x8 :: Op
foreign import ccall unsafe "BinaryenSubVecI16x8" subVecI16x8 :: Op
foreign import ccall unsafe "BinaryenSubSatSVecI16x8" subSatSVecI16x8 :: Op
foreign import ccall unsafe "BinaryenSubSatUVecI16x8" subSatUVecI16x8 :: Op
foreign import ccall unsafe "BinaryenMulVecI16x8" mulVecI16x8 :: Op
foreign import ccall unsafe "BinaryenMinSVecI16x8" minSVecI16x8 :: Op
foreign import ccall unsafe "BinaryenMinUVecI16x8" minUVecI16x8 :: Op
foreign import ccall unsafe "BinaryenMaxSVecI16x8" maxSVecI16x8 :: Op
foreign import ccall unsafe "BinaryenMaxUVecI16x8" maxUVecI16x8 :: Op
foreign import ccall unsafe "BinaryenAvgrUVecI16x8" avgrUVecI16x8 :: Op
foreign import ccall unsafe "BinaryenNegVecI32x4" negVecI32x4 :: Op
foreign import ccall unsafe "BinaryenAnyTrueVecI32x4" anyTrueVecI32x4 :: Op
foreign import ccall unsafe "BinaryenAllTrueVecI32x4" allTrueVecI32x4 :: Op
foreign import ccall unsafe "BinaryenShlVecI32x4" shlVecI32x4 :: Op
foreign import ccall unsafe "BinaryenShrSVecI32x4" shrSVecI32x4 :: Op
foreign import ccall unsafe "BinaryenShrUVecI32x4" shrUVecI32x4 :: Op
foreign import ccall unsafe "BinaryenAddVecI32x4" addVecI32x4 :: Op
foreign import ccall unsafe "BinaryenSubVecI32x4" subVecI32x4 :: Op
foreign import ccall unsafe "BinaryenMulVecI32x4" mulVecI32x4 :: Op
foreign import ccall unsafe "BinaryenMinSVecI32x4" minSVecI32x4 :: Op
foreign import ccall unsafe "BinaryenMinUVecI32x4" minUVecI32x4 :: Op
foreign import ccall unsafe "BinaryenMaxSVecI32x4" maxSVecI32x4 :: Op
foreign import ccall unsafe "BinaryenMaxUVecI32x4" maxUVecI32x4 :: Op
foreign import ccall unsafe "BinaryenDotSVecI16x8ToVecI32x4" dotSVecI16x8ToVecI32x4 :: Op
foreign import ccall unsafe "BinaryenNegVecI64x2" negVecI64x2 :: Op
foreign import ccall unsafe "BinaryenAnyTrueVecI64x2" anyTrueVecI64x2 :: Op
foreign import ccall unsafe "BinaryenAllTrueVecI64x2" allTrueVecI64x2 :: Op
foreign import ccall unsafe "BinaryenShlVecI64x2" shlVecI64x2 :: Op
foreign import ccall unsafe "BinaryenShrSVecI64x2" shrSVecI64x2 :: Op
foreign import ccall unsafe "BinaryenShrUVecI64x2" shrUVecI64x2 :: Op
foreign import ccall unsafe "BinaryenAddVecI64x2" addVecI64x2 :: Op
foreign import ccall unsafe "BinaryenSubVecI64x2" subVecI64x2 :: Op
foreign import ccall unsafe "BinaryenAbsVecF32x4" absVecF32x4 :: Op
foreign import ccall unsafe "BinaryenNegVecF32x4" negVecF32x4 :: Op
foreign import ccall unsafe "BinaryenSqrtVecF32x4" sqrtVecF32x4 :: Op
foreign import ccall unsafe "BinaryenQFMAVecF32x4" qFMAVecF32x4 :: Op
foreign import ccall unsafe "BinaryenQFMSVecF32x4" qFMSVecF32x4 :: Op
foreign import ccall unsafe "BinaryenAddVecF32x4" addVecF32x4 :: Op
foreign import ccall unsafe "BinaryenSubVecF32x4" subVecF32x4 :: Op
foreign import ccall unsafe "BinaryenMulVecF32x4" mulVecF32x4 :: Op
foreign import ccall unsafe "BinaryenDivVecF32x4" divVecF32x4 :: Op
foreign import ccall unsafe "BinaryenMinVecF32x4" minVecF32x4 :: Op
foreign import ccall unsafe "BinaryenMaxVecF32x4" maxVecF32x4 :: Op
foreign import ccall unsafe "BinaryenAbsVecF64x2" absVecF64x2 :: Op
foreign import ccall unsafe "BinaryenNegVecF64x2" negVecF64x2 :: Op
foreign import ccall unsafe "BinaryenSqrtVecF64x2" sqrtVecF64x2 :: Op
foreign import ccall unsafe "BinaryenQFMAVecF64x2" qFMAVecF64x2 :: Op
foreign import ccall unsafe "BinaryenQFMSVecF64x2" qFMSVecF64x2 :: Op
foreign import ccall unsafe "BinaryenAddVecF64x2" addVecF64x2 :: Op
foreign import ccall unsafe "BinaryenSubVecF64x2" subVecF64x2 :: Op
foreign import ccall unsafe "BinaryenMulVecF64x2" mulVecF64x2 :: Op
foreign import ccall unsafe "BinaryenDivVecF64x2" divVecF64x2 :: Op
foreign import ccall unsafe "BinaryenMinVecF64x2" minVecF64x2 :: Op
foreign import ccall unsafe "BinaryenMaxVecF64x2" maxVecF64x2 :: Op
foreign import ccall unsafe "BinaryenTruncSatSVecF32x4ToVecI32x4" truncSatSVecF32x4ToVecI32x4 :: Op
foreign import ccall unsafe "BinaryenTruncSatUVecF32x4ToVecI32x4" truncSatUVecF32x4ToVecI32x4 :: Op
foreign import ccall unsafe "BinaryenTruncSatSVecF64x2ToVecI64x2" truncSatSVecF64x2ToVecI64x2 :: Op
foreign import ccall unsafe "BinaryenTruncSatUVecF64x2ToVecI64x2" truncSatUVecF64x2ToVecI64x2 :: Op
foreign import ccall unsafe "BinaryenConvertSVecI32x4ToVecF32x4" convertSVecI32x4ToVecF32x4 :: Op
foreign import ccall unsafe "BinaryenConvertUVecI32x4ToVecF32x4" convertUVecI32x4ToVecF32x4 :: Op
foreign import ccall unsafe "BinaryenConvertSVecI64x2ToVecF64x2" convertSVecI64x2ToVecF64x2 :: Op
foreign import ccall unsafe "BinaryenConvertUVecI64x2ToVecF64x2" convertUVecI64x2ToVecF64x2 :: Op
foreign import ccall unsafe "BinaryenLoadSplatVec8x16" loadSplatVec8x16 :: Op
foreign import ccall unsafe "BinaryenLoadSplatVec16x8" loadSplatVec16x8 :: Op
foreign import ccall unsafe "BinaryenLoadSplatVec32x4" loadSplatVec32x4 :: Op
foreign import ccall unsafe "BinaryenLoadSplatVec64x2" loadSplatVec64x2 :: Op
foreign import ccall unsafe "BinaryenLoadExtSVec8x8ToVecI16x8" loadExtSVec8x8ToVecI16x8 :: Op
foreign import ccall unsafe "BinaryenLoadExtUVec8x8ToVecI16x8" loadExtUVec8x8ToVecI16x8 :: Op
foreign import ccall unsafe "BinaryenLoadExtSVec16x4ToVecI32x4" loadExtSVec16x4ToVecI32x4 :: Op
foreign import ccall unsafe "BinaryenLoadExtUVec16x4ToVecI32x4" loadExtUVec16x4ToVecI32x4 :: Op
foreign import ccall unsafe "BinaryenLoadExtSVec32x2ToVecI64x2" loadExtSVec32x2ToVecI64x2 :: Op
foreign import ccall unsafe "BinaryenLoadExtUVec32x2ToVecI64x2" loadExtUVec32x2ToVecI64x2 :: Op
foreign import ccall unsafe "BinaryenNarrowSVecI16x8ToVecI8x16" narrowSVecI16x8ToVecI8x16 :: Op
foreign import ccall unsafe "BinaryenNarrowUVecI16x8ToVecI8x16" narrowUVecI16x8ToVecI8x16 :: Op
foreign import ccall unsafe "BinaryenNarrowSVecI32x4ToVecI16x8" narrowSVecI32x4ToVecI16x8 :: Op
foreign import ccall unsafe "BinaryenNarrowUVecI32x4ToVecI16x8" narrowUVecI32x4ToVecI16x8 :: Op
foreign import ccall unsafe "BinaryenWidenLowSVecI8x16ToVecI16x8" widenLowSVecI8x16ToVecI16x8 :: Op
foreign import ccall unsafe "BinaryenWidenHighSVecI8x16ToVecI16x8" widenHighSVecI8x16ToVecI16x8 :: Op
foreign import ccall unsafe "BinaryenWidenLowUVecI8x16ToVecI16x8" widenLowUVecI8x16ToVecI16x8 :: Op
foreign import ccall unsafe "BinaryenWidenHighUVecI8x16ToVecI16x8" widenHighUVecI8x16ToVecI16x8 :: Op
foreign import ccall unsafe "BinaryenWidenLowSVecI16x8ToVecI32x4" widenLowSVecI16x8ToVecI32x4 :: Op
foreign import ccall unsafe "BinaryenWidenHighSVecI16x8ToVecI32x4" widenHighSVecI16x8ToVecI32x4 :: Op
foreign import ccall unsafe "BinaryenWidenLowUVecI16x8ToVecI32x4" widenLowUVecI16x8ToVecI32x4 :: Op
foreign import ccall unsafe "BinaryenWidenHighUVecI16x8ToVecI32x4" widenHighUVecI16x8ToVecI32x4 :: Op
foreign import ccall unsafe "BinaryenSwizzleVec8x16" swizzleVec8x16 :: Op

newtype Expression = Expression (Ptr Expression)
  deriving (Eq, Show)

foreign import ccall unsafe "BinaryenBlock"
  block ::
    Module ->
    Ptr CChar ->
    Ptr Expression ->
    Index ->
    Type ->
    IO Expression

foreign import ccall unsafe "BinaryenIf"
  if_ ::
    Module ->
    Expression ->
    Expression ->
    Expression ->
    IO Expression

foreign import ccall unsafe "BinaryenLoop"
  loop ::
    Module ->
    Ptr CChar ->
    Expression ->
    IO Expression
